[package]
name = "rename-via"
version = "0.1.0"
authors = ["k12ish <k4krish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
atty = "0.2.14"
ignore = "0.4.18"
dissimilar = "1.0.2"
colored = "2.0.0"
