[package]
name = "mv-with"
version = "0.1.0"
authors = ["k12ish <k4krish@gmail.com>"]
description = """
rename-with is a program that allows files to be renamed by editing their names in a text editor, like qmv.
"""
repository = "https://github.com/k12ish/mv-with"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
camino = "1.0.4"
clap = "2.33.3"
codespan-reporting = "0.11.1"
dialoguer = "0.8.0"
dissimilar = "1.0.2"
ignore = "0.4.18"
lazy_static = "1.4.0"
permutation = "0.2.5"
self_cell = "0.9.0"
